Add a cypher cell type
