# packages/openapi/api.yaml
@@ -72,6 +72,7 @@ components:
         language:
           default: python
           enum:
+          - cypher
           - markdown
           - python
           - sql
@@ -153,6 +154,7 @@ components:
         language:
           default: python
           enum:
+          - cypher
           - markdown
           - python
           - sql
@@ -1295,11 +1297,14 @@ components:
     DiagnosticsConfig:
       description: "Configuration options for diagnostics.\n\n    **Keys.**\n\n  \
         \  - `enabled`: if `True`, diagnostics will be shown in the editor\n    -\
-        \ `sql_linter`: if `True`, SQL cells will have linting enabled"
+        \ `sql_linter`: if `True`, SQL cells will have linting enabled\n    - `cypher_linter`:\
+        \ if `True`, Cypher cells will have linting enabled"
       properties:
         enabled:
           type: boolean
         sql_linter:
+          type: boolean
+        cypher_linter:
           type: boolean
       required: []
       title: DiagnosticsConfig
